# lua-resty-ffi

./: .gitignore  LICENSE  Makefile  Makefile-python.rocks  Makefile.rocks  README.md  benchmark.md  build.sh  build_shared.sh  ffi.lua  hot-reload.md  ngx_http_lua_ffi.c  ngx_http_lua_nonblocking_ffi.c  ngx_http_lua_nonblocking_ffi.h  nonblocking_ffi.lua  resty_ffi.lua
.github/: FUNDING.yml
examples/: .gitignore  Makefile  README.md  nginx.conf
examples/go/: .gitignore  Makefile  README.md  benchmark.lua  echo.go  etcd.go  go.mod  nginx.conf  unix_socket_server.go
examples/java/: .gitignore  Makefile  README.md  build.sh  loader.c  main.c  nginx.conf  run.sh
examples/lib_nonblocking_ffi_go_etcd/: .gitignore  Makefile  README.md  docker-compose.yml  echo.go  go.sum  main.go  nginx.conf  tmp.go
examples/lib_nonblocking_ffi_java/: .gitignore  Makefile  README.md  docker-compose.yml  main.c  nginx.conf
examples/lib_nonblocking_ffi_python3/: .gitignore  Makefile  README.md  docker-compose.yml  echo.py  kafka.py  main.c  nffi_kafka.py  nginx.conf  tmp.py
examples/nodejs/: .gitignore  Makefile  README.md  binding.gyp  build.sh  loader.cc  nginx.conf  resty_ffi.cc
examples/python/: Makefile  README.md  build.sh  echo.py  loader.c  nffi.py  nffi_kafka.py  nginx.conf  (+1 more)
examples/rust/grpc_client/: Cargo.toml
examples/rust/grpc_client/src/: lib.rs
patches/: config.patch  core.lua.patch  ngx_thread_pool.c.patch
rockspec/: lua-resty-ffi-main-1.rockspec  lua-resty-ffi-main-2.rockspec  lua-resty-ffi-python-main-1.rockspec  lua-resty-ffi-python-main-2.rockspec
(+23 files in other folders)
