[package]
name = "grpc_client"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
bytes = "1"
tonic = { version = "0.8.2", features = ["tls", "gzip"] }
tokio = { version = "1.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net",] }
tokio-stream = "0.1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
http = "0.2"
base64 = "0.13.1"
lazy_static = "1.4.0"
hyper = { version = "0.14", features = ["full"] }
